apps/overlays/huston/infra/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-management-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lab.markaplay.net`) && (Path(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
#      middlewares:
#        - name: traefik-dashboard-basicauth
#          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
    - match: (Host(`traefik.lab.markaplay.net`) || Host(`10.0.50.210`) || Host(`traefik.ovh.markaplay.net`)) && Path(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
  tls:
    secretName: traefik-cert
